# ssvep_brainhack

./: 01r__ssvep_viz.ipynb  analysis.py  main.py  pyproject.toml  results_psda.csv  ssvep-hackathon.ipynb  trca.py
data/: subject_1_fvep_led_training_1.EDF  subject_1_fvep_led_training_2.EDF  subject_2_fvep_led_training_1.EDF  subject_2_fvep_led_training_2.EDF
